Fix compilation for backport